Return the actual data fetched from data in BIN details endpoint.
